# Denux-Dashboard

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yml  index.html  not_found.html  redeploy.sh  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: clippy.yml  rust.yml
css/: main.css
css/sites/: 404.css
docker/rust/: Dockerfile
src/: app.rs  auth.rs  error_template.rs  errors.rs  fallback.rs  lib.rs  main.rs  state.rs  utilities.rs
src/components/: credentials.rs  mod.rs
src/css/: main.css
src/page/: login.rs
src/sites/: html_util.rs
src/user/: mod.rs  profile.rs  start_page.rs
style/: login.scss  main.scss  utility.scss
