[package]
name = "Denux-Dashboard"
version = "0.1.0-alpha.1"
license = "AGPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
#opt-level = 'z'
# optimization for size
opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[dependencies]
leptos = { version = "0.2.5", features = ["stable"] }
